# HARP

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DevNotes.md  DoxyMainPage.md  Doxyfile  LICENSE  MainComponent.h  MeetingNotes.md  README.md  RELEASE.md  TODO  TODO.md  VERSION  gradiojuce_client.spec  lala.json  reduceamp.pt
.github/workflows/: cmake_ctest.yml
Source/: ARAPluginDemo.h  DeepModel.h  Main.cpp  Model.h  TorchModel.h  WebModel.h  toolbarUI.h
Source/ARA/: AudioModification.cpp  AudioModification.h  AudioProcessor.h  AudioProcessorImpl.cpp  AudioProcessorImpl.h  CtrlComponent.h  DocumentControllerSpecialisation.cpp  DocumentControllerSpecialisation.h  EditorRenderer.cpp  EditorRenderer.h  EditorView.cpp  EditorView.h  ModelCardComponent.h  PlaybackRegion.cpp  PlaybackRegion.h  PlaybackRenderer.cpp  PlaybackRenderer.h  ProcessorEditor.cpp  ProcessorEditor.h
Source/DeepLearning/: Model.h  TorchModel.cpp  TorchModel.h  Wave2Wave.cpp  Wave2Wave.h  WebModel.h
Source/Timeline/: PlaybackRegion.cpp  PlaybackRegion.h  PlaybackRegionView.cpp  PlaybackRegionView.h  PlayheadPositionLabel.cpp  PlayheadPositionLabel.h  SharedTimeSliceThread.h
Source/UI/: CustomComponents.h  DocumentView.cpp  DocumentView.h  Layout.cpp  Layout.h  LookAndFeel.h  ModelCard.h  RegionSequenceView.cpp  RegionSequenceView.h  RulersHeader.cpp  RulersHeader.h  RulersView.cpp  RulersView.h  ToolBarStyle.cpp  ToolBarStyle.h  TrackHeader.h  ZoomControls.h
Source/Util/: AsyncConfigurationCallback.h  Crossfade.h  Looper.h  PossiblyBufferedReader.h  PreviewState.h  ProcessingLockInterface.h  TimeToViewScaling.h
Source/WaveformCache/: WaveformCache.h
cmake/: SourceFiles.cmake  gradio_client.cmake  libtorch-mac.cmake  miniconda.cmake
documentation/html/: _async_configuration_callback_8h.html  _async_configuration_callback_8h_source.html  _audio_modification_8cpp.html  _audio_modification_8h.html  _audio_modification_8h_source.html  _audio_processor_8h.html  _audio_processor_8h_source.html  _audio_processor_impl_8cpp.html  _audio_processor_impl_8h.html  _audio_processor_impl_8h_source.html  _crossfade_8h.html  _crossfade_8h_source.html  _document_controller_specialisation_8cpp.html  _document_controller_specialisation_8h.html  _document_controller_specialisation_8h_source.html  _document_view_8cpp.html  _document_view_8h.html  _document_view_8h_source.html  _editor_renderer_8cpp.html  _editor_renderer_8h.html  _editor_renderer_8h_source.html  _editor_view_8h.html  _layout_8cpp.html  _layout_8h.html  _layout_8h_source.html  _looper_8h.html  _looper_8h_source.html  _main_8cpp.html  _model_8h.html  _model_8h_source.html  _playback_region_8h.html  _playback_region_8h_source.html  _playback_region_view_8h.html  _playback_renderer_8cpp.html  _playback_renderer_8h.html  _playback_renderer_8h_source.html  _playhead_position_label_8cpp.html  _playhead_position_label_8h.html  _playhead_position_label_8h_source.html  _possibly_buffered_reader_8h.html  (+154 more)
documentation/latex/: _async_configuration_callback_8h.tex  _async_configuration_callback_8h_source.tex  _audio_modification_8cpp.tex  _audio_modification_8h.tex  _audio_modification_8h_source.tex  _audio_processor_8h.tex  _audio_processor_8h_source.tex  _audio_processor_impl_8cpp.tex  _audio_processor_impl_8h.tex  _audio_processor_impl_8h_source.tex  _crossfade_8h.tex  _crossfade_8h_source.tex  _document_controller_specialisation_8cpp.tex  _document_controller_specialisation_8h.tex  _document_controller_specialisation_8h_source.tex  _document_view_8cpp.tex  _document_view_8h.tex  _document_view_8h_source.tex  _editor_renderer_8cpp.tex  _editor_renderer_8h.tex  _editor_renderer_8h_source.tex  _layout_8cpp.tex  _layout_8h.tex  _layout_8h_source.tex  _looper_8h.tex  _looper_8h_source.tex  _main_8cpp.tex  _model_8h.tex  _model_8h_source.tex  _playback_region_8h.tex  _playback_region_8h_source.tex  _playback_renderer_8cpp.tex  _playback_renderer_8h.tex  _playback_renderer_8h_source.tex  _playhead_position_label_8cpp.tex  _playhead_position_label_8h.tex  _playhead_position_label_8h_source.tex  _possibly_buffered_reader_8h.tex  _possibly_buffered_reader_8h_source.tex  _preview_state_8h.tex  (+127 more)
documentation/xml/: Doxyfile.xml  _audio_modification_8h.xml  _audio_processor_impl_8h.xml  _document_controller_specialisation_8h.xml  _document_view_8cpp.xml  _document_view_8h.xml  _doxy_main_page_8md.xml  _editor_renderer_8cpp.xml  _editor_view_8h.xml  _look_and_feel_8h.xml  _main_8cpp.xml  _model_8h.xml  _playback_region_8cpp.xml  _playback_renderer_8cpp.xml  _playback_renderer_8h.xml  _playhead_position_label_8h.xml  _possibly_buffered_reader_8h.xml  _processor_editor_8h.xml  _r_e_a_d_m_e_8md.xml  _region_sequence_view_8cpp.xml  _region_sequence_view_8h.xml  _rulers_header_8h.xml  _rulers_view_8h.xml  _torch_model_8h.xml  _waveform_cache_8h.xml  class_audio_modification.xml  class_ctrl_component.xml  class_document_view.xml  class_editor_view.xml  class_h_a_r_p_audio_processor_impl.xml  class_h_a_r_p_document_controller_specialisation_1_1_job_processor_thread.xml  class_h_a_r_p_processor_editor.xml  class_looper.xml  class_model.xml  class_overlay_component_1_1_playhead_marker_component.xml  class_playback_region.xml  class_playback_region_view.xml  class_playback_region_view_1_1_preview_region_overlay.xml  class_playhead_position_label.xml  class_region_sequence_view.xml  (+27 more)
packaging/: dmg.json  package.sh
py/: relocatable-python.cmake
py/client/: entitlements.plist  get_ctrls.py  (+4 more)
pyharp/: .gitignore  README.md  requirements.txt  setup.py
src/: AppSettings.h  AudioDisplayComponent.h  AudioDisplayComponentOld.h  ControlAreaWidget.h  CtrlComponent.h  GradioAPI.h  HarpLogger.cpp  HarpLogger.h  Main.cpp  MainComponent.h  MediaClipboardWidget.h  MediaDisplayComponent.h  MidiDisplayComponent.h  Model.h  ThreadPoolJob.h  TitledTextBox.h  TrackAreaWidget.h  WebModel.h  errors.h  model_paths.txt  utils.h
test/: test.mid
website/: README.md  index.md  package.json  pnpm-lock.yaml
(+440 files in other folders)
